--- a/TolyID/MVVM/Views/TatusCadastradosView.xaml
+++ b/TolyID/MVVM/Views/TatusCadastradosView.xaml
@@ -8,13 +8,13 @@
              x:Class="TolyID.MVVM.Views.TatusCadastradosView"
              Shell.BackgroundColor="{StaticResource Primary}"
              Shell.TitleColor="White"
-             BackgroundColor="{StaticResource Background}"
-             Padding="15">
+             BackgroundColor="{StaticResource White}"
+             Padding="0, 15, 0, 0">
 
     <Shell.TitleView>
         <Grid ColumnDefinitions="7*, 1.5*, 1.5*" ColumnSpacing="-15">
             <Label Text="Início" TextColor="White" FontSize="20" FontFamily="Inter-Medium" VerticalOptions="Center"/>
-            
+
             <ImageButton Grid.Column="1" 
                          Source="icone_ordenar.png"
                          Scale=".7"
@@ -31,97 +31,98 @@
         </Grid>
     </Shell.TitleView>
 
-    <Border Grid.Row="2">
-        <Grid>
-            <ScrollView>
-                <StackLayout Spacing="17" Padding="0, 20, 0, 10">
-                    <Label Text="Tatus" 
-                            Style="{StaticResource LabelTitulo}" 
-                            TextColor="{StaticResource Texto}"
-                            FontSize="16"/>
+    <Grid>
+        <ScrollView>
+            <StackLayout Spacing="17">
+                <Label Text="Tatus" 
+                        Style="{StaticResource LabelTitulo}" 
+                        TextColor="{StaticResource Texto}"
+                        FontSize="16"
+                       Margin="20, 0, 0, 0"/>
 
-                    <CollectionView ItemsSource="{Binding Tatus}">
-                        <CollectionView.ItemTemplate>
-                            <DataTemplate x:DataType="models:Tatu">
-                                <SwipeView>
+                <CollectionView ItemsSource="{Binding Tatus}">
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate x:DataType="models:Tatu">
+                            <SwipeView>
 
-                                    <SwipeView.LeftItems>
-                                        <SwipeItems SwipeBehaviorOnInvoked="Close" >
-                                            <SwipeItemView Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:TatusCadastradosViewModel}}, Path=DeletaTatuCommand}" 
-                                                            CommandParameter="{Binding .}"
-                                                            IsVisible="{Binding FoiEnviadoParaApi, Converter={StaticResource InvertedBoolConverter}}">
+                                <SwipeView.LeftItems>
+                                    <SwipeItems SwipeBehaviorOnInvoked="Close" >
+                                        <SwipeItemView Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:TatusCadastradosViewModel}}, Path=DeletaTatuCommand}" 
+                                                        CommandParameter="{Binding .}"
+                                                        IsVisible="{Binding FoiEnviadoParaApi, Converter={StaticResource InvertedBoolConverter}}">
 
-                                                <Frame BorderColor="Transparent" BackgroundColor="LightPink"
-                                                        CornerRadius="0"
-                                                        Padding="10"
-                                                        WidthRequest="70">
-                                                    <Image Source="icone_apagar.png" Scale=".45"/>
-                                                </Frame>
-                                            </SwipeItemView>
-                                        </SwipeItems>
-                                    </SwipeView.LeftItems>
+                                            <Frame BorderColor="Transparent" BackgroundColor="LightPink"
+                                                    CornerRadius="0"
+                                                    Padding="10"
+                                                    WidthRequest="70">
+                                                <Image Source="icone_apagar.png" Scale=".45"/>
+                                            </Frame>
+                                        </SwipeItemView>
+                                    </SwipeItems>
+                                </SwipeView.LeftItems>
 
-                                    <StackLayout>
+                                <StackLayout>
 
-                                        <StackLayout.Behaviors>
-                                            <toolkit:TouchBehavior DefaultAnimationDuration="250"
-                                                                    DefaultAnimationEasing="{x:Static Easing.CubicInOut}"
-                                                                    PressedOpacity="0.6" 
-                                                                    PressedBackgroundColor="{StaticResource Gray100}"/>
-                                        </StackLayout.Behaviors>
+                                    <StackLayout.Behaviors>
+                                        <toolkit:TouchBehavior DefaultAnimationDuration="250"
+                                                                DefaultAnimationEasing="{x:Static Easing.CubicInOut}"
+                                                                PressedOpacity="0.6" 
+                                                                PressedBackgroundColor="{StaticResource Gray100}"/>
+                                    </StackLayout.Behaviors>
 
-                                        <StackLayout.GestureRecognizers>
-                                            <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:TatusCadastradosViewModel}}, Path=VisualizaTatuCommand}"
-                                                                    CommandParameter="{Binding .}"/>
-                                        </StackLayout.GestureRecognizers>
+                                    <StackLayout.GestureRecognizers>
+                                        <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:TatusCadastradosViewModel}}, Path=VisualizaTatuCommand}"
+                                                                CommandParameter="{Binding .}"/>
+                                    </StackLayout.GestureRecognizers>
 
-                                        <Frame Padding="20, 10, 10, 10" BorderColor="Transparent" BackgroundColor="Transparent" InputTransparent="True" CornerRadius="0">
-                                            <Grid ColumnDefinitions="8*, 2*">
+                                    <Frame Padding="20, 10, 10, 10" BorderColor="Transparent" BackgroundColor="Transparent" InputTransparent="True" CornerRadius="0">
+                                        <Grid ColumnDefinitions="8*, 2*">
 
-                                                <StackLayout>
-                                                    <Label Text="{Binding IdentificacaoAnimal, StringFormat='Id: {0}'}" 
-                                                            FontFamily="Inter-Medium" 
-                                                            FontSize="17"  
-                                                            TextColor="{StaticResource Texto}"/>
-                                                    <Label Text="{Binding NumeroMicrochip, StringFormat='Chip: {0}'}" 
-                                                            FontFamily="Inter-Regular" 
-                                                            FontSize="15" 
-                                                            TextColor="{StaticResource Texto}"
-                                                            Opacity=".85"/>
-                                                    <Label Text="{Binding Capturas.Count, StringFormat='N° de Capturas: {0}'}" 
-                                                            FontFamily="Inter-Regular" 
-                                                            FontSize="15" 
-                                                            TextColor="{StaticResource Texto}"
-                                                            Opacity=".85"/>
-                                                </StackLayout>
+                                            <StackLayout>
+                                                <Label Text="{Binding IdentificacaoAnimal, StringFormat='Id: {0}'}" 
+                                                        FontFamily="Inter-Medium" 
+                                                        FontSize="17"  
+                                                        TextColor="{StaticResource Texto}"/>
+                                                <Label Text="{Binding NumeroMicrochip, 
+                                                                StringFormat='Chip: {0}', 
+                                                                TargetNullValue='Chip: não cadastrado'}" 
+                                                        FontFamily="Inter-Regular" 
+                                                        FontSize="15" 
+                                                        TextColor="{StaticResource Texto}"
+                                                        Opacity=".85"/>
+                                                <Label Text="{Binding Capturas.Count, StringFormat='N° de Capturas: {0}'}" 
+                                                        FontFamily="Inter-Regular" 
+                                                        FontSize="15" 
+                                                        TextColor="{StaticResource Texto}"
+                                                        Opacity=".85"/>
+                                            </StackLayout>
 
-                                                <Image Grid.Column="1"
-                                                        Source="icone_dessincronizado.png"
-                                                        VerticalOptions="CenterAndExpand"
-                                                        HorizontalOptions="CenterAndExpand"
-                                                        Scale="1.3"
-                                                        IsVisible="{Binding FoiEnviadoParaApi, Converter={StaticResource InvertedBoolConverter}}"/>
-                                            </Grid>
-                                        </Frame>
-                                        <BoxView BackgroundColor="Black" Opacity=".25" HeightRequest=".1"/>
-                                    </StackLayout>
+                                            <Image Grid.Column="1"
+                                                    Source="icone_dessincronizado.png"
+                                                    VerticalOptions="CenterAndExpand"
+                                                    HorizontalOptions="CenterAndExpand"
+                                                    Scale="1.3"
+                                                    IsVisible="{Binding FoiEnviadoParaApi, Converter={StaticResource InvertedBoolConverter}}"/>
+                                        </Grid>
+                                    </Frame>
+                                    <BoxView BackgroundColor="Black" Opacity=".25" HeightRequest=".1"/>
+                                </StackLayout>
 
-                                </SwipeView>
-                            </DataTemplate>
-                        </CollectionView.ItemTemplate>
-                    </CollectionView>
-                </StackLayout>
-            </ScrollView>
+                            </SwipeView>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+            </StackLayout>
+        </ScrollView>
 
-            <Button Grid.Column="1" 
-                    ImageSource="icone_adicionar.png" 
-                    HorizontalOptions="End" 
-                    VerticalOptions="End"
-                    Margin="0, 0, 15, 15"
-                    CornerRadius="25"
-                    BackgroundColor="{StaticResource Primary}" 
-                    Command="{Binding NovoTatuCommand}"/>
-        </Grid>
-    </Border>
+        <Button Grid.Column="1" 
+                ImageSource="icone_adicionar.png" 
+                HorizontalOptions="End" 
+                VerticalOptions="End"
+                Margin="0, 0, 15, 15"
+                CornerRadius="25"
+                BackgroundColor="{StaticResource Primary}" 
+                Command="{Binding NovoTatuCommand}"/>
+    </Grid>
 
 </ContentPage>
