--- a/TolyID/MVVM/Views/CadastroDeCaptura/BiometriaView.xaml
+++ b/TolyID/MVVM/Views/CadastroDeCaptura/BiometriaView.xaml
@@ -155,11 +155,11 @@
         </ScrollView>
 
         <!-- INDICADOR DE SALVAMENTO EM ANDAMENTO -->
-        <BoxView IsVisible="{Binding IsBusy}"
+        <BoxView IsVisible="{Binding EstaCarregando}"
                  Opacity=".3"/>
 
-        <ActivityIndicator IsRunning="{Binding IsBusy}"
-                           IsVisible="{Binding IsBusy}"
+        <ActivityIndicator IsRunning="{Binding EstaCarregando}"
+                           IsVisible="{Binding EstaCarregando}"
                            VerticalOptions="Center"/>
     </Grid>
 </ContentPage>
