--- a/TolyID/MVVM/Views/CadastroDeCaptura/DadosGeraisView.xaml
+++ b/TolyID/MVVM/Views/CadastroDeCaptura/DadosGeraisView.xaml
@@ -69,18 +69,19 @@
                     <Button Text="Próximo"
                             WidthRequest="100"
                             Style="{StaticResource Botao}"
-                            input:FormView.IsSubmitButton="True"/>
+                            input:FormView.IsSubmitButton="True"
+                            IsEnabled="{Binding BotaoProximoBloqueado, Converter={StaticResource InvertedBoolConverter}}"/>
 
                 </input:FormView>
 
             </VerticalStackLayout>
             
             <!-- INDICADOR DE SALVAMENTO EM ANDAMENTO -->
-            <BoxView IsVisible="{Binding IsBusy}"
+            <BoxView IsVisible="{Binding EstaCarregando}"
                      Opacity=".3"/>
 
-            <ActivityIndicator IsRunning="{Binding IsBusy}"
-                               IsVisible="{Binding IsBusy}"
+            <ActivityIndicator IsRunning="{Binding EstaCarregando}"
+                               IsVisible="{Binding EstaCarregando}"
                                VerticalOptions="Center"/>
             
         </Grid>
