--- a/TolyID/MVVM/Views/TatuView.xaml
+++ b/TolyID/MVVM/Views/TatuView.xaml
@@ -68,13 +68,13 @@
 
                         <DataTrigger TargetType="Image"
                                      Binding="{Binding Tatu.Sexo}"
-                                     Value="Macho">
+                                     Value="M">
                             <Setter Property="Source" Value="icone_macho.png" />
                         </DataTrigger>
 
                         <DataTrigger TargetType="Image"
                                      Binding="{Binding Tatu.Sexo}"
-                                     Value="Femea">
+                                     Value="F">
                             <Setter Property="Source" Value="icone_femea.png" />
                         </DataTrigger>
                         
@@ -95,7 +95,7 @@
 
                         <DataTrigger TargetType="Label"
                                      Binding="{Binding Tatu.Sexo}"
-                                     Value="Femea">
+                                     Value="F">
                             <Setter Property="Text" Value="Fêmea"/>
                         </DataTrigger>
 
