--- a/TolyID/MVVM/Views/TatusCadastradosView.xaml
+++ b/TolyID/MVVM/Views/TatusCadastradosView.xaml
@@ -4,6 +4,7 @@
              xmlns:models="clr-namespace:TolyID.MVVM.Models"
              xmlns:viewmodel="clr-namespace:TolyID.MVVM.ViewModels"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+             xmlns:material="http://schemas.enisn-projects.io/dotnet/maui/uraniumui/material"
              x:DataType="viewmodel:TatusCadastradosViewModel"
              x:Class="TolyID.MVVM.Views.TatusCadastradosView"
              Shell.BackgroundColor="{StaticResource Primary}"
